# private-library-project

./: Dockerfile  README.md  docker-compose.yaml  nginx.conf
components/module_project_3_backend/: README.md  pyproject.toml  setup.cfg
components/module_project_3_backend/private_library/adapters/: cli.py
components/module_project_3_backend/private_library/adapters/database/: mapping.py  repositories.py  settings.py  tables.py
components/module_project_3_backend/private_library/adapters/message_bus/: consumer.py  scheme.py
components/module_project_3_backend/private_library/adapters/private_library_api/: __init__.py  app.py  auth.py  controllers.py  join_points.py
components/module_project_3_backend/private_library/application/: dataclasses.py  errors.py  interfaces.py  services.py
components/module_project_3_backend/private_library/composites/: cli.py  consumer.py  private_library_api.py
components/module_project_3_backend/tests/: conftest.py
components/module_project_3_backend/tests/integration/adapters/: conftest.py
components/module_project_3_backend/tests/integration/adapters/database/: conftest.py
components/module_project_3_backend/tests/integration/adapters/database/repositories/: test_books.py  test_journal.py  (+1 more)
components/module_project_3_backend/tests/integration/application/services/: external_service.py
components/module_project_3_backend/tests/unit/application/: conftest.py
components/module_project_3_backend/tests/unit/application/services/: test_authorization.py  test_autorization.py  test_book_services.py  test_library.py
(+10 files in other folders)
