[metadata]
name = project-private-library
version = 1.0.0
description = Демо проект, построенный по чистой архитектуре
author = Kudryavtsev Denis
author_email = den-kyder@mail.ru
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find_namespace:
python_requires = ~=3.7.0

install_requires =
    amqp==5.1.0
    attrs==21.2.0
    PyJWT~=1.7.1
    backports.cached-property==1.0.1
    cached-property==1.5.2
    click==8.1.2
    #evraz-classic-components~=1.0.0
    #evraz-classic-aspects~=1.0.0
    #evraz-classic-app-layer~=1.0.3
    #evraz-classic-http-api~=1.0.1
    #evraz-classic-http-auth~=1.0.0
    #evraz-classic-sql-storage~=1.0.1
    #evraz-classic-messaging~=1.0.0
    #evraz-classic-messaging-kombu~=1.0.0
    falcon==3.0.1
    greenlet==1.1.2
    importlib-metadata==4.11.3
    kombu==5.1.0
    pydantic==1.8.2
    requests==2.27.1
    SQLAlchemy==1.4.35
    typing_extensions==4.1.1
    vine==5.0.0
    zipp==3.8.0
    gunicorn==20.1.0
    psycopg2-binary~=2.9.3



[options.extras_require]
dev =
    pytest~=6.2.5
    pytest-cov~=2.12.1
    isort~=5.10.0
    yapf~=0.32.0

[options.entry_points]
console_scripts =
    private_library=private_library.composites.cli:cli
